--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
         <!-- change by tudou -->
         {% if site.show_tudou_add_page %}
           <div class="show_tudou_add_page">
-            <span>Pages:</span>
+            <span> </span>
             <ul>
               <li><a href="{{ site.github.home_url }}" class="button">Home</a></li>
               <li><a href="{{ site.github.about_url }}" class="button">About</a></li>
