--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,7 +42,7 @@
       <nav>
         <ul></ul>
       </nav>
-      <section>
+      <section style="height: auto; width: auto;">
         {{ content }}
 
       </section>
