--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,9 @@
   <body>
 
       <header>
-        <h1>{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
+        <a href="{{ site.github.home_url }}" class="button">
+          <h1>{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
+        </a>
         <p>{{ page.description | default: site.description | default: site.github.project_tagline }}</p>
       </header>
 
